--- a/app/blocks/layout-header/layout-header.pug
+++ b/app/blocks/layout-header/layout-header.pug
@@ -24,5 +24,5 @@ mixin layout-header(data)
       if data.type === 'space'
         +nd-link-icon('share').__share Share
       if data.type === 'list'
-        +drop-navigation({title: 'Offers', linkClasses: '_fz13 _small', list: [{name: "All (15)", href: "#"}, {name: "Hot desks (2)", href: "#"}, {name: "Fixed desks (8)", href: "#"}, {name: "Meeting Rooms (8)", href: "#"}, {name: "Private offices (5)", href: "#"}]}, 4, 'Private offices (5)')._md._rounded.__select.js-offer-select
+        +drop-navigation({title: 'Offers', list: [{name: "All (15)", href: "#"}, {name: "Hot desks (2)", href: "#"}, {name: "Fixed desks (8)", href: "#"}, {name: "Meeting Rooms (8)", href: "#"}, {name: "Private offices (5)", href: "#"}]}, 4, 'Private offices (5)')._md._rounded.__select.js-offer-select
     block
