--- a/app/pages/space/space-v4.pug
+++ b/app/pages/space/space-v4.pug
@@ -46,7 +46,7 @@ block content
                     +e.name!=item.type.name
                   if item.title
                     +e.title!=item.title
-                  +nd-table._info._info_space.__table
+                  +nd-table._info._info_space._info_space_small-fz.__table
                     tbody
                       tr
                         td Amount of desks
