--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -257,6 +257,7 @@ $font-stolzl-book: 'StolzlBook', 'Stolzl', 'ProximaNova', 'Arial', sans-serif;
 
 $icon-input-calendar: url('../images/bg/bg-calendar.svg');
 $icon-select-arrow: url('../images/bg/bg-arrow-select.svg');
+$icon-select-arrow-gray: url('../images/bg/bg-arrow-select-gray.svg');
 $icon-cross: url('../images/bg/bg-cross.svg');
 $icon-bold-cross: url('../images/bg/bg-bold-cross.svg');
 $icon-bold-cross-blue: url('../images/bg/bg-bold-cross-blue.svg');
