--- a/app/blocks/drop-navigation/drop-navigation.scss
+++ b/app/blocks/drop-navigation/drop-navigation.scss
@@ -83,6 +83,10 @@
         width: pxtovw(30, 375);
         background-size: pxtovw(10, 375) pxtovw(7, 375);
       }
+
+      #{$b}_rounded & {
+        background-image: $icon-select-arrow-gray;
+      }
     }
 
     #{$b}.is-open &::after {
@@ -110,7 +114,9 @@
     }
 
     #{$b}_rounded & {
+      @include rule(min-width, (xl: 150px, xlg: 150, lg: 150, md: 150, sm: 150));
       @include rule(border-radius, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
+      @include rule(height, (md: 30, sm: 30));
       @include rule(padding-left, (xl: 14px, xlg: 14, lg: 14, md: 14, sm: 14));
 
       border-color: $nd-color-border5;
@@ -259,6 +265,24 @@
     }
   }
 
+  &__wrapper {
+    display: flex;
+
+    @include screen('sm', max, 2) {
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+    }
+
+    #{$b}_md & {
+      @include screen('md', max, 2) {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+      }
+    }
+  }
+
   &__item {
     display: inline-block;
     width: auto;
@@ -353,6 +377,10 @@
         line-height: (26 / 20);
         padding: pxtovw(13, 375) pxtovw(10, 375) pxtovw(12, 375);
       }
+    }
+
+    #{$b}_rounded & {
+      @include rule(font-size, (xl: 13px, xlg: 13, lg: 13, md: 13, sm: 13));
     }
 
     body:not(.is-touched-device) & {
@@ -459,6 +487,12 @@
         color: $nd-color-basic;
         box-shadow: none;
       }
+
+      #{$b}_rounded & {
+        padding: 0;
+
+        @include rule(font-size, (md: 13, sm: 13));
+      }
     }
 
     &_progress {
@@ -541,5 +575,9 @@
     #{$b}__link.is-new & {
       display: inline-block;
     }
+  }
+
+  &_rounded {
+
   }
 }
