--- a/app/blocks/space/nd-space.scss
+++ b/app/blocks/space/nd-space.scss
@@ -1272,11 +1272,11 @@
       @include rule(padding-left, (xl: 27px, xlg: 27, lg: 27, md: 18, sm: 18));
 
       @include screen('md', max, 2) {
-        padding: pxtovw(13, 960) pxtovw(18, 960) pxtovw(20, 960);
+        padding: 0 pxtovw(15, 960) pxtovw(10, 960);
       }
 
       @include screen('sm', max, 2) {
-        padding: pxtovw(13, 375) pxtovw(18, 375) pxtovw(20, 375);
+        padding: 0 pxtovw(15, 375) pxtovw(10, 375);
       }
     }
 
@@ -1379,7 +1379,7 @@
 
     #{$b}_single-offer_short & {
       &:not(:first-child) {
-        @include rule(margin-top, (xl: 34px, xlg: 34, lg: 36, md: 34, sm: 34));
+        @include rule(margin-top, (xl: 34px, xlg: 34, lg: 36, md: 15, sm: 34));
       }
     }
   }
