--- a/app/blocks/table/nd-table.scss
+++ b/app/blocks/table/nd-table.scss
@@ -771,11 +771,25 @@
         line-height: 1.758;
 
         @include rule(font-size, (xl: 15px, xlg: 15, lg: 13, md: 15, sm: 15));
+
+        &:last-child {
+          @include rule(font-size, (lg: 14, md: 15, sm: 15));
+        }
+
+        b {
+          font-weight: 600;
+        }
       }
 
-
       &_small-fz {
-        @include rule(font-size, (xl: 15px, xlg: 15, lg: 13, md: 11, sm: 15));
+        td, th {
+          @include rule(font-size, (xl: 15px, xlg: 15, lg: 13, md: 11, sm: 15));
+          @include rule(line-height, (lg: 23, md: 19, sm: 26));
+
+          &:last-child {
+            @include rule(font-size, (lg: 14, md: 12, sm: 15));
+          }
+        }
       }
     }
   }
