--- a/app/blocks/space-type/space-type.scss
+++ b/app/blocks/space-type/space-type.scss
@@ -111,6 +111,11 @@
       }
     }
 
+    &_sz7 {
+      @include rule(width, (xl: 7px, xlg: 7, lg: 7, md: 7, sm: 7));
+      @include rule(height, (xl: 7px, xlg: 7, lg: 7, md: 7, sm: 7));
+    }
+
     &_sz9 {
       @include rule(width, (xl: 9px, xlg: 9, lg: 9, md: 9, sm: 9));
       @include rule(height, (xl: 9px, xlg: 9, lg: 9, md: 9, sm: 9));
