--- a/app/components/filter/nd-filter.pug
+++ b/app/components/filter/nd-filter.pug
@@ -2,7 +2,7 @@ mixin nd-filter()
   +b.nd-filter&attributes(attributes)
     +e.item
       +e.A.button(href="#").nd-hide-from-sm
-        +icon('back-arrow').__icon_back
+        +icon('back-arrow').__icon_back.js-layout-close-active
       +e.BUTTON.button.nd-hide-sm.js-sr-filter-reset(type="reset" disabled form="search-filter")
         +icon('cross-bold').__icon_cross
         span Clear filter
