--- a/app/components/popup-arrange-viewing/popup-arrange-viewing.pug
+++ b/app/components/popup-arrange-viewing/popup-arrange-viewing.pug
@@ -39,7 +39,7 @@ mixin popup-arrange-viewing()
 mixin nd-popup-arrange-viewing()
   +nd-popup.nd-popup-arrange-viewing__&attributes(attributes)
     +nd-popup-header
-      +nd-popup-back().js-nd-popup(href="#popup-offer-types") Back
+      +nd-popup-back()(data-fancybox-close) Back
       +nd-popup-title Set viewing date/time
     +nd-popup-content()
       .nd-container
