--- a/app/pages/search/search-types-v2.pug
+++ b/app/pages/search/search-types-v2.pug
@@ -62,7 +62,7 @@ block content
                           b £ 2,400 per month
 
 
-    +e.column_start._popup(data-layout="space")
+    +e.column_start._start_space._popup(data-layout="space")
       +layout-header({type: 'space', popup: true})._main._popup
       +e.wrapper
         +space-description
@@ -106,13 +106,13 @@ block content
                         td Price
                         td
                           b £ 2,400 per month
-    +e.column_start._popup(data-layout="offer")
+    +e.column_start._start_offer._popup(data-layout="offer")
       +e.wrapper
         +offer-description
         +offer-description-panel()._abs(data-offer-panel)
           +e.offer
             +space-type._gray.__type
-              +nd-box()._green.__box
+              +nd-box()._green.__box_sz7
               +e.name PRIVATE OFFICE
             +e.title 13 desks office space
           +e.buttons
