--- a/app/pages/search/search-v2-header.pug
+++ b/app/pages/search/search-v2-header.pug
@@ -48,7 +48,7 @@ block content
                   +offer-table(item.offers)._transforma._transforma_v2.__list
                 +e.button.hide-from-sm View all 20 listings
 
-    +e.column_start._popup(data-layout="space")
+    +e.column_start._start_space._popup(data-layout="space")
       +layout-header({type: 'space', popup: true})._main._popup
       +e.wrapper
         +space-description
@@ -94,13 +94,13 @@ block content
                         td
                           b £ 2,400 per month
 
-    +e.column_start._popup(data-layout="offer")
+    +e.column_start._start_offer._popup(data-layout="offer")
       +e.wrapper
         +offer-description
         +offer-description-panel()._abs(data-offer-panel)
           +e.offer
             +space-type._gray.__type
-              +nd-box()._green.__box
+              +nd-box()._green.__box_sz7
               +e.name PRIVATE OFFICE
             +e.title 13 desks office space
           +e.buttons
