--- a/app/pages/space/space-v4.pug
+++ b/app/pages/space/space-v4.pug
@@ -16,7 +16,7 @@ block header
 
 block content
   +layout._static
-    +e.column_start
+    +e.column_start._start_space
       +e.wrapper
         +layout-header({type: 'space', popup: false})._main._inner
         +space-description
@@ -62,13 +62,13 @@ block content
                         td
                           b £ 2,400 per month
 
-    +e.column_start._popup(data-layout="offer")
+    +e.column_start._start_offer._popup(data-layout="offer")
       +e.wrapper
         +offer-description
         +offer-description-panel()._abs(data-offer-panel)
           +e.offer
             +space-type._gray.__type
-              +nd-box()._green.__box
+              +nd-box()._green.__box_sz7
               +e.name PRIVATE OFFICE
             +e.title 13 desks office space
           +e.buttons
