--- a/app/components/offer-description/offer-description.scss
+++ b/app/components/offer-description/offer-description.scss
@@ -47,7 +47,7 @@
     }
 
     &:not(:first-child) {
-      @include rule(margin-top, (xl: 34px, xlg: 34, lg: 30, md: 30, sm: 20));
+      @include rule(margin-top, (xl: 18px, xlg: 18, lg: 15, md: 15, sm: 20));
     }
   }
 
@@ -84,7 +84,7 @@
     }
 
     &:not(:first-child) {
-      @include rule(margin-top, (xl: 18px, xlg: 18, lg: 18, md: 18, sm: 18));
+      @include rule(margin-top, (xl: 46px, xlg: 46, lg: 30, md: 21, sm: 18));
     }
   }
 
@@ -97,6 +97,10 @@
     img {
       width: 100%;
     }
+
+    &:not(:first-child) {
+      @include rule(margin-top, (xl: 30px, xlg: 30, lg: 30, md: 20, sm: 20));
+    }
   }
 
   &__header {
@@ -104,9 +108,9 @@
     grid-column: 1 / 3;
     grid-row: 1 / 2;
     flex-direction: row;
-    justify-content: space-betwen;
+    justify-content: space-between;
     align-items: baseline;
-    align-tracks: flex-start;
+    align-content: flex-start;
     flex-wrap: wrap;
 
     @include screen('sm', max, 2) {
@@ -117,6 +121,11 @@
 
   &__type {
     width: 100%;
+    font-weight: 700;
+    letter-spacing: normal;
+    font-family: $font-main;
+
+    @include rule(font-size, (xl: 12px, xlg: 12, lg: 12, md: 12, sm: 12));
   }
 
   &__price {
@@ -157,18 +166,26 @@
     letter-spacing: normal;
   }
 
+  &__table {
+    @include rule(margin-top, (lg: 30, md: 20, sm: 20));
+  }
+
   &__section {
     display: block;
     width: 100%;
     box-sizing: border-box;
 
     &_describe {
+      @include rule(padding-right, (xl: 45px, xlg: 45, lg: 0));
+
       grid-column: 1 / 2;
       grid-row: 2 / 3;
+      border-right: 1px solid $nd-color-border6;
 
       @include screen('lg', max, 2) {
         grid-column: 1 / 3;
         grid-row: 2 / 3;
+        border-right: none;
       }
 
       @include screen('sm', max, 2) {
@@ -177,11 +194,14 @@
       }
 
       &:not(:first-child) {
-        @include rule(margin-top, (xl: 36px, xlg: 36, lg: 36, md: 36, sm: 36));
+        @include rule(margin-top, (xl: 50px, xlg: 50, lg: 35, md: 28, sm: 38));
       }
     }
 
     &_table {
+      @include rule(padding-left, (xl: 50px, xlg: 50, lg: 0));
+      @include rule(padding-right, (lg: 72, md: 64, sm: 0));
+
       grid-column: 2 / 3;
       grid-row: 2 / 3;
 
@@ -196,17 +216,20 @@
       }
 
       &:not(:first-child) {
-        @include rule(margin-top, (xl: 25px, xlg: 25, lg: 25, md: 25, sm: 25));
+        @include rule(margin-top, (xl: 50px, xlg: 50, lg: 55, md: 48, sm: 7));
       }
     }
 
     &_list {
+      @include rule(padding-left, (xl: 50px, xlg: 50, lg: 0));
+      @include rule(padding-right, (lg: 72, md: 64, sm: 0));
+
       grid-column: 2 / 3;
       grid-row: 3 / 5;
 
       @include screen('lg', max, 2) {
         grid-column: 1 / 2;
-        grid-row: 4 / 3;
+        grid-row: 4 / 5;
       }
 
       @include screen('sm', max, 2) {
@@ -215,17 +238,21 @@
       }
 
       &:not(:first-child) {
-        @include rule(margin-top, (xl: 90px, xlg: 90, lg: 90, md: 90, sm: 90));
+        @include rule(margin-top, (xl: 18px, xlg: 18, lg: 40, md: 47, sm: 92));
       }
     }
 
     &_plan {
+      @include rule(padding-right, (xl: 45px, xlg: 45, lg: 0));
+
+      border-right: 1px solid $nd-color-border6;
       grid-column: 1 / 2;
       grid-row: 4 / 5;
 
       @include screen('lg', max, 2) {
         grid-column: 2 / 3;
         grid-row: 3 / 5;
+        border-right: none;
       }
 
       @include screen('sm', max, 2) {
@@ -243,7 +270,8 @@
       }
 
       &:not(:first-child) {
-        @include rule(margin-top, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 30));
+        @include rule(padding-top, (xl: 38px, xlg: 38, lg: 0));
+        @include rule(margin-top, (xl: 0px, xlg: 0, lg: 55, md: 48, sm: 12));
       }
     }
   }
