--- a/app/blocks/page/nd-page.scss
+++ b/app/blocks/page/nd-page.scss
@@ -78,7 +78,7 @@
   &_pt0 {
     padding-top: 0;
 
-    .is-noheader &, .is-sm-noheder & {
+    .is-noheader &, .is-sm-noheader & {
       padding-top: 0;
     }
   }
