--- a/app/components/space-description/space-description.scss
+++ b/app/components/space-description/space-description.scss
@@ -12,6 +12,10 @@
       z-index: 2;
       background-color: $nd-color-basic-light;
       ;
+
+      .layout_static & {
+        background-color: $nd-color-bg;
+      }
     }
 
     @include rule(padding-top, (sm: 18));
@@ -30,6 +34,10 @@
         bottom: 0;
         background-color: $nd-color-basic-light;
         z-index: -1;
+
+        .layout_static & {
+          background-color: $nd-color-bg;
+        }
       }
     }
 
@@ -58,6 +66,10 @@
     margin: 0;
     width: 100%;
 
+    .layout_static & {
+      background-color: $nd-color-bg;
+    }
+
     &:not(:first-child) {
       @include rule(padding-top, (xl: 26px, xlg: 26, lg: 26, md: 26, sm: 26));
     }
@@ -73,6 +85,10 @@
         background-color: $nd-color-basic-light;
         ;
         z-index: -1;
+
+        .layout_static & {
+          background-color: $nd-color-bg;
+        }
       }
     }
   }
@@ -89,6 +105,10 @@
       ;
       position: relative;
       z-index: 2;
+
+      .layout_static & {
+        background-color: $nd-color-bg;
+      }
     }
 
     &::before {
@@ -101,6 +121,10 @@
         bottom: 0;
         background-color: $nd-color-basic-light;
         z-index: -1;
+
+        .layout_static & {
+          background-color: $nd-color-bg;
+        }
       }
     }
 
