--- a/app/components/results/nd-results.scss
+++ b/app/components/results/nd-results.scss
@@ -208,7 +208,7 @@
   }
 
   &__divider {
-    display: box;
+    display: block;
     width: 100%;
 
     &:not(:first-child) {
@@ -216,13 +216,25 @@
     }
 
     &:not(:last-child) {
-      @include rule(margin-bottom, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 15));
+      @include rule(margin-bottom, (xl: 10px, xlg: 10, lg: 10, md: 20, sm: 15));
     }
 
     + #{$b}__item {
       @include screen('md', max, 2) {
         margin-top: 0;
       }
+    }
+
+    &-name {
+      @include rule(font-size, (xl: 20px, xlg: 20, lg: 16, md: 15, sm: 15));
+
+      display: block;
+      line-height: (24 / 20);
+      font-family: $font-stolzl;
+      font-weight: 400;
+      letter-spacing: normal;
+      text-align: center;
+      width: 100%;
     }
   }
 
