--- a/app/pages/space/space-v4.pug
+++ b/app/pages/space/space-v4.pug
@@ -4,7 +4,7 @@ block head
   - var pageTitle = 'Spacepool - Space'
 
 block bodyClasses
-  - var bodyCls = ' is-sm-no-header';
+  - var bodyCls = ' is-sm-noheader';
   - var scripts = ['other']
 
 block header
@@ -22,12 +22,13 @@ block content
         +space-description
         +space-description-panel
 
-    +e.column_end
+    +e.column_end.nd-hide-sm
       +layout-header({type: 'list', popup: false})._list._sort._popup._bg-gray
       +e.wrapper
         +nd-results._v2
-          +e.divider.nd-hide-from-md
-            +space-type._gray._fz12.__type
+          +e.divider
+            +e.divider-name.nd-hide-lg Canvas Dalstone Lane Private offices
+            +space-type._gray._fz12.__type.nd-hide-from-md
               +nd-box()._green.__box_sz9
               +e.name PRIVATE OFFICES
           each item in getData('space-offers-po.json')
