fixes for layers

--- a/app/blocks/layout-header/layout-header.pug
+++ b/app/blocks/layout-header/layout-header.pug
@@ -5,7 +5,7 @@ mixin layout-header(data)
         +icon('cross')
     if !data.popup && data.type === 'space'
       +e.A.back.js-layout-close-active.nd-hide-from-sm(href="#")
-        +icon('back-arrow')
+        +icon('arrow5')
     +e.wrapper
       - var isListing = (data.type === 'list' && data.popup)
       - var titleClass = isListing ? '_fz20' : ''
