--- a/app/components/layout/layout.scss
+++ b/app/components/layout/layout.scss
@@ -75,6 +75,10 @@
       .map-in-fullview & {
         z-index: 4;
 
+        @include screen('sm', min, 2) {
+          z-index: 16;
+        }
+
         @include screen('md', max, 2) {
           align-self: start;
         }
@@ -141,6 +145,9 @@
       overflow: hidden;
       justify-self: end;
       will-change: width, height;
+      box-sizing: border-box;
+      transition: padding .5s ease-in-out;
+      padding-right: 0;
 
       @include screen('md', max, 2) {
         grid-column: 1 / 3;
@@ -151,8 +158,26 @@
         grid-row: 2 / 4;
       }
 
+      @include screen('md', min, 2) {
+        z-index: 11;
+      }
+
+      .layout-offer-active &,
+      .is-layout-offer-out & {
+        @include screen('md', min, 2) {
+          z-index: 14;
+        }
+      }
+
+      .layout-space-active &,
+      .layout-list-active &,
       .map-in-fullview & {
-        grid-column: 1 / 3;
+        @include screen('md', min, 2) {
+          z-index: 11;
+        }
+      }
+
+      .map-in-fullview & {
         animation: map-hor-animation .5s ease-in-out forwards 1;
 
         @include screen('lg', max, 2) {
@@ -161,6 +186,42 @@
 
         @include screen('md', max, 2) {
           animation: none;
+        }
+
+        @include screen('sm', min, 2) {
+          grid-column: 1 / 3;
+        }
+      }
+
+      .map-in-fullview.layout-list-active & {
+        padding-right: 0;
+
+        @include screen('sm', min, 2) {
+          padding-right: 31.25%;
+        }
+
+        @include screen('md', min, 2) {
+          padding-right: 47.07%;
+        }
+
+        @include screen('lg', min, 2) {
+          padding-right: 41.51%;
+        }
+      }
+
+      .map-in-fullview.layout-offer-active:not(.layout-list-active) & {
+        padding-left: 0;
+
+        @include screen('sm', min, 2) {
+          padding-left: 68.75%;
+        }
+
+        @include screen('md', min, 2) {
+          padding-left: 52.93%;
+        }
+
+        @include screen('lg', min, 2) {
+          padding-left: 58.49%;
         }
       }
 
@@ -217,6 +278,10 @@
         grid-row: 2 / 4;
       }
 
+      @include screen('sm', min, 2) {
+        z-index: 15;
+      }
+
       &.layout__column_popup {
         @include screen('sm', max, 2) {
           display: none;
@@ -253,13 +318,19 @@
       }
 
       &.layout__column_end {
+        @include screen('sm', min, 2) {
+          z-index: 15;
+        }
+      }
+
+      &.layout__column_offer {
         z-index: 13;
       }
 
       .map-in-fullview & {
         &.layout__column_end {
           box-shadow: -11px 0px 11px rgba(0, 0, 0, 0.14);
-          z-index: 3;
+          // z-index: 3;
 
           @include screen('xlg', max, 2) {
             box-shadow: -pxtovw(11, 1660) 0px pxtovw(11, 1660) rgba(0, 0, 0, 0.14);
@@ -278,9 +349,9 @@
           }
         }
 
-        &.layout__column_start {
-          z-index: 2;
-        }
+        // &.layout__column_start {
+        //   z-index: 2;
+        // }
       }
 
       .map-in-fullview.layout-offer-active & {
@@ -312,7 +383,7 @@
           right: 0;
           z-index: 2;
           height: 1px;
-          background-color: $nd-color-basic-light;
+          background-color: transparent;
           box-shadow: boxShadow(0, 2, 2, 0, rgba(0, 0, 0, 0.06), false);
 
           @include screen('xlg', max, 2) {
@@ -417,6 +488,30 @@
           }
         }
       }
+
+      &.is-layout-animated-out {
+        &.layout__column_end {
+          @include screen('md', max, 2) {
+            right: 0;
+            width: 31.25vw;
+          }
+
+          @include screen('sm', max, 2) {
+            width: 100%;
+          }
+        }
+
+        &.layout__column_start {
+          @include screen('md', max, 2) {
+            left: 0;
+            width: 68.75vw;
+          }
+
+          @include screen('sm', max, 2) {
+            width: 100%;
+          }
+        }
+      }
     }
   }
 
@@ -486,6 +581,24 @@
   }
 
   &_static {
+    grid-template-rows: 0 calc(100vh - 94px);
+
+    @include screen("xlg", max, 2) {
+      grid-template-rows: 0 calc(100vh - (9400 / 1660) * 1vw);
+    }
+
+    @include screen("lg", max, 2) {
+      grid-template-rows: 0 calc(100vh - (6600 / 1366) * 1vw);
+    }
+
+    @include screen("md", max, 2) {
+      grid-template-rows: pxtovw(257, 960)auto;
+    }
+
+    @include screen("sm", max, 2) {
+      grid-template-rows: 0 pxtovw(208, 375) auto;
+    }
+
     #{$b} {
       &__column {
         &_start_space {
