--- a/app/components/search-map/nd-search-map.scss
+++ b/app/components/search-map/nd-search-map.scss
@@ -302,6 +302,11 @@
         pointer-events: none;
       }
     }
+
+    .layout-offer-active & {
+      opacity: 0;
+      pointer-events: none;
+    }
   }
 
   &__filter {
