--- a/app/components/search-map/nd-search-map.scss
+++ b/app/components/search-map/nd-search-map.scss
@@ -361,8 +361,10 @@
     pointer-events: auto;
     transform: translate3d(0, 0, 0);
     z-index: 0;
-    // transition: height 1s ease-in-out, width 1s ease-in-out;
-    will-change: width, height;
+    transition: padding .5s ease-in-out;
+    will-change: width, height, padding;
+    padding: 0;
+    box-sizing: border-box;
 
     @include rule(top, (md: 66, sm: 60));
     @include rule(height, (md: 257, sm: 208));
@@ -390,6 +392,38 @@
 
       @include screen('sm', max, 2) {
         height: calc(100% - (6000 / 375) * 1vw);
+      }
+    }
+
+    .map-in-fullview.layout-list-active & {
+      padding-right: 0;
+
+      @include screen('sm', min, 2) {
+        padding-right: 31.25%;
+      }
+
+      @include screen('md', min, 2) {
+        padding-right: 47.07%;
+      }
+
+      @include screen('lg', min, 2) {
+        padding-right: 41.51%;
+      }
+    }
+
+    .map-in-fullview.layout-offer-active:not(.layout-list-active) & {
+      padding-left: 0;
+
+      @include screen('sm', min, 2) {
+        padding-left: 68.75%;
+      }
+
+      @include screen('md', min, 2) {
+        padding-left: 52.93%;
+      }
+
+      @include screen('lg', min, 2) {
+        padding-left: 58.49%;
       }
     }
 
